--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = {version="4.0", features=["derive"]}
-image = "0.24.4"
-opencv = "0.64.0"
+clap = {version="4.1.4", features=["derive"]}
+image = "0.24.5"
+opencv = "0.76.2"
 num-traits = "0.2.15"
 bimap = "0.6.2"
 multimap = "0.8.3"
+ordered-multimap = "0.6.0"
+rustc_data_structures = "0.0.1"
